# Hyper-Ingest

./: .gitignore  CMakeLists.txt  README_API.md  api_service.py  conanfile.txt  data_enriched.json  enrich_data.py  import_json_to_duckdb.py  run.sh  run_tests.sh
include/Network/: HttpIngestor.hpp
include/core/: RingBuffer.hpp  ThreadPool.hpp  Threadpool.hpp
include/data/: StorageEngine.hpp
include/search/: SearchService.hpp
src/: main.cpp
src/Network/: Httpingestor.cpp
src/data/: StorageEngine.cpp
src/search/: SearchService.cpp
tests/: test_HttpIngestor.cpp  test_Integration.cpp  test_RingBuffer.cpp  test_SearchService.cpp  test_StorageEngine.cpp  test_ThreadPool.cpp
